--- a/client/index.html
+++ b/client/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="imge-generator-container">
-      <h1><span>Dall E</span> Image Generator</h1>
+    <div class="image-generator-container">
+      <h1><span class="dalle">Dall E</span> Image Generator</h1>
       <div class="content">
         <input
           type="text"
@@ -19,7 +19,12 @@
         <button class="generate-btn">Generate Image</button>
 
         <div class="image-container">
-          <img src="images/2.png" class="generated-image" alt="" />
+          <img
+            src="images/11.png"
+            width="400px"
+            class="generated-image"
+            alt=""
+          />
         </div>
       </div>
       <a href="" class="download-btn"
