--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
           />
         </div>
       </div>
-      <a href="" class="download-btn"
+      <a href="images/11.png" download="ai-image.png" class="download-btn"
         ><span class="icon"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
